upgrade_nav_style_media

--- a/src/index.html
+++ b/src/index.html
@@ -406,54 +406,55 @@
             </header>
           </div>
           <div class="row">
-            <form action="http://localhost:3131/form" method="POST" class="form-wrapper">
+            <form class="form-wrapper">
               <div class="input-wrapper input-wrapper--personal">
-                <label for="name"class="input-wrapper__label">Name </label>
+                <label for="name" class="input-wrapper__label">Name </label>
                 <input id="name" type="text" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal">
-                <label class="input-wrapper__label">Surname</label>
-                <input type="text" class="input-wrapper__input">
+                <label for="surname" class="input-wrapper__label">Surname</label>
+                <input id="surname" type="text" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal">
-                <label class="input-wrapper__label">E-mail</label>
-                <input type="email" class="input-wrapper__input">
+                <label for="email" class="input-wrapper__label">E-mail</label>
+                <input id="email" type="email" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal input-wrapper--after">
-                <label class="input-wrapper__label">Phone number</label>
-                <input type="tel" class="input-wrapper__input">
+                <label for="phone" class="input-wrapper__label">Phone number</label>
+                <input id="phone" type="tel" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal">
-                <label class="input-wrapper__label">Skype</label>
-                <input type="text" class="input-wrapper__input">
+                <label for="skype" class="input-wrapper__label">Skype</label>
+                <input id="skype" type="text" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal">
-                <label class="input-wrapper__label">ICQ</label>
-                <input type="text" class="input-wrapper__input">
+                <label for="icq" class="input-wrapper__label">ICQ</label>
+                <input id="icq" type="text" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal input-wrapper--after">
-                <label class="input-wrapper__label">Msn</label>
-                <input type="text" class="input-wrapper__input">
+                <label for="msn" class="input-wrapper__label">Msn</label>
+                <input id="msn"  class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal nput-wrapper--after">
-                <label class="input-wrapper__label">Wallet</label>
-                <input type="number" class="input-wrapper__input">
+                <label for="wallet" class="input-wrapper__label">Wallet</label>
+                <input id="wallet" type="number" class="input-wrapper__input">
               </div>
               <div class="input-wrapper input-wrapper--personal">
-                <label class="input-wrapper__label">Password</label>
-                <input type="password" class="input-wrapper__input input-wrapper__input--password">
+                <label for="password" class="input-wrapper__label">Password</label>
+                <input id="password" type="password" class="input-wrapper__input input-wrapper__input--password">
               </div>
               <div class="input-wrapper input-wrapper--personal input-wrapper--after">
-                <label class="input-wrapper__label">Repeat</label>
-                <input type="password" class="input-wrapper__input">
-              </div>
-              <div class="row">
-                <div class="button-wrapper">
-                  <button type="submit" class="button button--alternative">Save</button>
-                </div>
+                <label for="password_second" class="input-wrapper__label">Repeat</label>
+                <input id="password_second" type="password" class="input-wrapper__input">
               </div>
             </form>
           </div>
+          <div class="row">
+            <div class="button-wrapper">
+              <button type="submit" class="button button--alternative">Save</button>
+            </div>
+          </div>
+          
         </section>
         <section class="page deactive payout">
           <div class="row">
