fix_media_style

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,11 @@
       <nav class="navigation">
         <ul class="list list-icons">
           <li class="list__element--horizontal list__element--before"><a class="link link--list"
-              href="#"><i class="icon-wallet icons"></i>1500 $<i class="icon-arrow-down icons icons--small"></i></a></li>
+              href="#"><i class="icon-wallet icons icons--margin"></i>1500 $<i class="icon-arrow-down icons icons--margin icons--small"></i></a></li>
           <li class="list__element--horizontal list__element--before"><a class="link link--list" href="#"><i
                 class="icon-notification icons icons--after"></i></a></li>
           <li class="list__element--horizontal list__element--before"><a class="link link--list" href="#"><i
-                class="icon-profile icons"></i>Leonardo Di Caprio</a></li>
+                class="icon-profile icons icons--margin"></i>Leonardo Di Caprio</a></li>
           <li class="list__element--horizontal list__element--before"><a class="link link--list" href="#"><i
                 class="icon-quit icons"></i></a></li>
         </ul>
