--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 chart">
+            <div class="col-xs-11 col-sm-8 col-md-8 col-lg-8 chart">
               <div class="title">
                 <h3 class="title-section title-section--left-padding">Earnings chart</h3>
               </div>
@@ -444,8 +444,8 @@
                 <input id="password" type="password" class="input-wrapper__input input-wrapper__input--password">
               </div>
               <div class="input-wrapper input-wrapper--personal input-wrapper--after">
-                <label for="password_second" class="input-wrapper__label">Repeat</label>
-                <input id="password_second" type="password" class="input-wrapper__input">
+                <label for="password_repeat" class="input-wrapper__label">Repeat</label>
+                <input id="password_repeat" type="password" class="input-wrapper__input input-wrapper__input--password">
               </div>
             </form>
           </div>
